--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lumaai/luma-web": "^0.2.2",
     "@react-three/drei": "^9.97.4",
     "@react-three/fiber": "^8.15.16",
     "@types/three": "^0.161.2",
@@ -29,5 +30,9 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
+  },
+  "overrides": {
+    "three": "$three",
+    "@types/three": "$@types/three"
   }
 }
