--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@lumaai/luma-web": "^0.2.2",
     "@react-three/drei": "^9.97.4",
     "@react-three/fiber": "^8.15.16",
+    "@react-three/offscreen": "^0.0.8",
     "@types/three": "^0.161.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
